--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,2 +1,3 @@
-<h1>{{title}}</h1>
+<h1 [hidden]="!isVisiable">{{title}}</h1>
+<button (click)="changeVisiablity()">Show/Hide</button>
 <app-customers-list></app-customers-list>
