--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,3 +1,3 @@
 <h1 [hidden]="!isVisiable">{{title}}</h1>
-<button (click)="changeVisiablity()">Show/Hide</button>
-<app-customers-list></app-customers-list>
+<!-- <button (click)="changeVisiablity()">Show/Hide</button> -->
+<app-customers-list [customers]="people"></app-customers-list>
