--- a/src/app/customers/customers-list/customers-list.component.html
+++ b/src/app/customers/customers-list/customers-list.component.html
@@ -1,4 +1,4 @@
-<app-filter-textbox (changed)="filter($event)"></app-filter-textbox>
+<app-filter-textbox [filter]="'Seattle'" (changed)="filter($event)"></app-filter-textbox>
 <br />
 <br />
 <table class="table table-hover">
